Responsive table using Flexbox (fixes #1)
URLList table elements uses flexbox layout model instead of table.
Media queries are used to alter flex-flow of the cells.
The thead is only displayed on tablet and desktop screen sizes (> 600px wide). Also label (click to copy) is hidden on phone screens.
To compensate for lack of thead there are labels displayed in Visits and Last visited cells (using CSS :before pseudo element and data attribute to enable i18n).
As a side effect, it is now possible to truncate long URLs using CSS `text-overflow: ellipsis` directive. No need to call `truncate` function anymore nor to require `underscore.string`.

--- a/style/index.styl
+++ b/style/index.styl
@@ -92,58 +92,5 @@ form
       color            accent
       font-size        inherit
 
-  table
-    width             100%
-    border-spacing    8px
-
-    th
-      font-weight     normal
-      text-transform  uppercase
-      font-size       14px
-      text-align      left
-      color           secondary
-
-    td
-      padding         16px 0
-
-      a
-        display         block
-        // justify-content space-between
-        // flex-wrap       wrap
-
-        text-decoration none
-        font-weight     normal
-
-        &:focus
-          border-left    solid 4px accent
-          padding-left   4px
-          outline        none
-
-        .shortened
-          color           primary
-
-          strong
-            color         accent
-            font-weight   inherit
-
-
-        label
-          float          right
-          padding        0 16px
-          color          accent
-          font-weight    lighter
-
-          pointer-events none
-          opacity        0
-          transition     opacity 500ms
-
-        &:hover label
-          opacity       1
-
-        .original
-          color           unimportant
-          clear           both
-          // TODO: Make text overflow work
-          // text-overflow   ellipsis
-          // white-space     nowrap
-          // overflow        hidden
+  @import './table'
+  @import './responsive-table'
